--- a/client/src/components/ImageUpload.css
+++ b/client/src/components/ImageUpload.css
@@ -15,9 +15,9 @@
     /* margin-right: '48px'; */
   }
   
-  button {
+  /* .uploadButton{
     position: absolute;
     top: 5px;
     right: 5px;
-  }
+  } */
   
